--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,21 +10,30 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4 # Mise à jour vers v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
     - name: Install dependencies
       run: npm install
 
-    - name: test
+    - name: Test
       run: npm test
 
-    - name: Login in to DockerHub
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    # Utilisation de l'action officielle pour Docker Login
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/demo-cicd-minikube:latest .
-        
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/demo-cicd-minikube:latest 
-      
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/demo-cicd-minikube:latest
           
