--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo "Tests OK""
+    "test": "echo 'Tests OK'"
   },
   "dependencies": {
     "express": "^4.18.2"
