--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,3 +37,17 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/demo-cicd-minikube:latest
           
+    to-deploy:
+      needs: build-and-push
+      runs-on: self-hosted
+      
+      steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to Minikube
+        run: |
+        minikube start
+        kubectl apply -f k8s
+        kubectl get pods
+        minikube service demo-app-service
