--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Deploy to Minikube
       run: |
-        minikube start --driver=docker -force 
+        minikube start --driver=docker --force 
         kubectl apply -f k8s
         kubectl get pods
         minikube service demo-app-service
